# cuda-mpqs

./: .gitattributes  .gitignore  AUTHORS.md  BUILD.md  CHANGELOG.md  CITATION.cff  CLUSTER.md  CMakeLists.txt  COPYRIGHT.md  README.md  USER_GUIDE.md
cmake/: version.cmake
docs/: architecture.md
docs/modules/: autotune.md  cluster.md  common.md  largeprimes.md  linalg.md  matrix.md  orchestrator.md  postprocessing.md  sieve.md  sqrt.md  tests.md
include/: mpqs_common.h  orchestrator.h  version.h.in
src/autotune/: CMakeLists.txt  auto_apply.cpp  auto_apply.h  autotune.cpp  autotune.h  autotune_history.cpp  autotune_history.h  autotune_projection.cpp  autotune_projection.h  autotune_types.h  benign_history.cpp  benign_history.h  cost_models.cpp  cost_models.h  json_reader.h  kernel_launch_validator.cpp  kernel_launch_validator.h  kernel_param_optimizer.cpp  kernel_param_optimizer.h  memory_estimator.h  runtime_estimator.cpp  runtime_estimator.h  sieve_optimizer.cpp  sieve_optimizer.h
src/cluster/: CMakeLists.txt  accumulator.h  async_network_data_tap.cpp  async_network_data_tap.h  chunk_scheduler.cpp  chunk_scheduler.h  cluster_common.h  comm_backend.h  cpu_lp.cu  cpu_lp.h  data_tap.h  direct_channel.h  network_data_tap.h  serialization.cpp  serialization.h  spsc_ring.h  tcp_backend.cpp  tcp_backend.h  tcp_transport.cpp  tcp_transport.h  work_pool.cpp  work_pool.h
src/common/: CMakeLists.txt  cuda_check.h  math_utils.cuh  montgomery.cuh  mpqs_soa.cu  mpqs_soa.h  mpqs_structures.h  relation_hash.h  relation_io.cpp  relation_io.h  sieve_checkpoint.cpp  sieve_checkpoint.h  uint128_helper.cuh  uint512.cuh
src/common/logger/: hpc_logger.cpp  hpc_logger.h
src/largeprimes/: CMakeLists.txt  largeprime.cu  largeprime.h
src/linalg/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  USAGE.md
src/linalg/benchmarks/: bench_karatsuba.cu  bench_lingen_apply_pi.cu  bench_matmulgf2.cu  bw_lingen_benchmark.cu  bw_lingen_smoke.cu
src/linalg/cmake/: bw_version.h.in  version.cmake
src/linalg/cuda_spmm/: CMakeLists.txt
src/linalg/cuda_spmm/bench/: full_benchmark.cpp  single_benchmark.cpp  verify_interface.cpp
src/linalg/cuda_spmm/benchmarks/: bench_gpu_autotune.cu
src/linalg/cuda_spmm/include/: autotuner.h  benchmarksuite.h  bw_spmm_interface.h  common.h  device_csr.h  device_format_convert.h  format_arena.h  generator.h  gpu_autotuner.h  kernels.h  m4rm_data.h  optimizer_common.h  preprocessing.h  reordering.h  spmm_optimized.h  vec_type.h  verification.h
src/linalg/cuda_spmm/src/: autotuner.cpp  benchmarksuite.cpp  bw_spmm_interface.cpp  device_csr.cu  device_format_convert.cu  generator.cu  gpu_autotuner.cu  kernels.cu  m4rm_host.cpp  m4rm_kernels.cu  preprocessing.cpp  reordering.cpp  spmm_optimized.cpp  verification.cpp
src/linalg/cuda_spmm/tests/: test_autotuner_ab.cu  test_format_correctness.cu  test_golden_regression.cu  test_memory_leak.cu  test_spmm_endtoend.cu
src/linalg/include/: bw_solution_view.h  bw_solver.h  hpc_logger.h  validation_io.h
src/linalg/include/lingen/: types.h
src/linalg/python/: block_wiedemann_lingen_v5.py  verify_bw_pipeline.py
src/linalg/src/lingen/: bw_solver.cu  bw_version.cpp
src/linalg/src/lingen/io/: bw_io.h  hash.h
src/linalg/src/lingen/operations/: bw_operator.cu  bw_operator.h  karatsuba.cuh  karatsuba.cuh_old  matmul_gf2.cu  matmul_gf2.h  poly_arith_engine.cu  poly_arith_engine.h  poly_arithmetic.cu  poly_arithmetic.h  poly_mat_vec.cu  poly_mat_vec.h
src/linalg/src/lingen/stage1/: krylov_generator.cu  krylov_generator.h  krylov_kernels.cu  krylov_kernels.h
src/linalg/src/lingen/stage2/: basecase_ops.cu  basecase_ops.h  basecase_solver.cu  basecase_solver.h  basecase_solver_reference.cu  basecase_solver_reference.h  device_poly.h
src/linalg/src/lingen/stage3/: solution_reconstructor.cu  solution_reconstructor.h
src/linalg/tests/: test_s_disk_io.cu
src/linalg/utils/: hpc_logger.cpp
src/matrix/: CMakeLists.txt  character_columns.cpp  character_columns.h  device_packed_csr.cu  device_packed_csr.cuh  expanded_matrix.cpp  expanded_matrix.h  gpu_batch_merge.cu  gpu_batch_merge.cuh  gpu_char_cols.cu  gpu_char_cols.cuh  gpu_compact_packed.cu  gpu_compact_packed.cuh  gpu_gf2_extract.cu  gpu_gf2_extract.cuh  gpu_packed_expanded.cu  gpu_packed_expanded.cuh  gpu_product_char_packed.cu  gpu_product_char_packed.cuh  gpu_singleton.cu  gpu_singleton.cuh  gpu_singleton_packed.cu  gpu_singleton_packed.cuh  matrix_constructor.cu  matrix_constructor.h  matrix_truncation.cpp  matrix_truncation.h  matrix_utils.h  merge_filter.cpp  merge_filter.h  merge_tree.cpp  merge_tree.h  preprocess.cpp  preprocess.h
src/orchestrator/: CMakeLists.txt  orchestrator.cpp
src/postprocessing/: CMakeLists.txt  postprocessing.cu  postprocessing.h
src/sieve/: CMakeLists.txt  README.md  common.h  debug_dump.cu  debug_dump.cuh  debug_dump.h  device_sieving_controller.cpp  device_sieving_controller.h  graycode.cuh  json_helper.h  kernel.cu  kernel.cuh  prime_algorithms.cu  prime_algorithms.h  sieve_memory_model.h  sieving_data_structs.h
src/sqrt/: CMakeLists.txt  fake_relation_generator.cpp  fake_relation_generator.h  sqrt_step.cu  sqrt_step.h
tests/: CMakeLists.txt  candidates.txt  cuda-mpqs.cpp  mpqs_analyzer.html  multi_factor_candidates.txt  non-rsa-candidates.txt  sieving_benchmark.cpp  sqrt_benchmark.cpp
tools/: generate_test_composites.py  generate_test_composites_large.py  gpu_monitor.sh
tools/autotune/: test_oom_guard.cu
tools/cluster/: example_2node.sh
tools/sqrt_failure/: branch_char_fixture.h  relation_validator.cu  test_aux_prime_selection.cu  test_branch_char_bit.cu  test_char_bits_persist.cu  test_char_xor_propagation.cu  test_checkpoint_io.cu  test_cluster_resume.cu  test_nt_primitives_u64.cu  test_packed_char_device_parity.cu  test_packed_char_gather.cu  test_work_pool_cursor.cu
